Главная страница окончена

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>HTML Academy: Седона - главная</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/main-page.css" rel="stylesheet">
 </head>
 
 <body>
@@ -205,15 +206,15 @@
       <h3 class="visually-hidden">Седона на карте</h3>
       <!-- <iframe class="map-iframe" width="1200" height="593" src="https://maps.google.com/maps?width=1200&amp;height=593&amp;hl=en&amp;q=sedona+(sedona)&amp;ie=UTF8&amp;t=&amp;z=10&amp;iwloc=B&amp;output=embed"></iframe> -->
     </div>
-    <footer class="main-footer">
-      <div class="container-footer">
-        <div class="a-tag">
-          <a href="#" class="hashtag" target="_blank">#Visitsedona</a>
+    <footer class="footer">
+      <div class="footer__inner">
+        <div class="footer__hashtag">
+          <a href="#" class="footer__hashtag-link" target="_blank">#Visitsedona</a>
         </div>
-        <div class="social">
-          <ul class="footer-social">
-            <li>
-              <a class="social-button" href="#">
+        <div class="footer__social">
+          <ul class="footer__social-list">
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="#">
                 <span class="visually-hidden">Твиттер</span>
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
                   y="0px" width="17px" height="15px" viewBox="0 0 17 15" enable-background="new 0 0 17 15"
@@ -227,8 +228,8 @@
                 </svg>
               </a>
             </li>
-            <li>
-              <a class="social-button" href="#">
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="#">
                 <span class="visually-hidden">Фейсбук</span>
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
                   y="0px" width="12px" height="22px" viewBox="0 0 12 22" enable-background="new 0 0 12 22"
@@ -237,8 +238,8 @@
                 </svg>
               </a>
             </li>
-            <li>
-              <a class="social-button" href="#">
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="#">
                 <span class="visually-hidden">Ютьюб</span>
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
                   y="0px" width="20px" height="16px" viewBox="0 0 20 16" enable-background="new 0 0 20 16"
@@ -250,9 +251,9 @@
             </li>
           </ul>
         </div>
-        <div class="footer-copyright">
-          <span>Website by</span>
-          <a class="button-html" href="https://htmlacademy.ru/intensive/htmlcss">
+        <div class="footer__copyright">
+          <span class="footer__copyright-text">Website by</span>
+          <a class="footer__copyright-link" href="https://htmlacademy.ru/intensive/htmlcss">
             <svg class="htmlacademy" tabindex="0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108.08 36.85"
               width="115" height="41" data-name="Layer 1">
               <title>HTMLAcademy</title>
